--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -59,6 +59,7 @@ dns:
   default-nameserver: [223.5.5.5, 119.29.29.29, 114.114.114.114]
   nameserver-policy:
     "+.lohome.top": [223.5.5.5, 119.29.29.29]
+    "+.syncthing.net": [https://223.5.5.5/dns-query, https://1.12.12.12/dns-query]
     "geosite:tracker,private": [223.5.5.5, 119.29.29.29]
     "geosite:cn,china-lis,category-games@cn,apple,microsoft@cn,onedrive": [https://223.5.5.5/dns-query, https://1.12.12.12/dns-query]
     "geosite:google,geolocation-!cn": [https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
