--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -21,7 +21,8 @@ find-process-mode: strict
 log-level: debug
 mode: rule
 external-controller: 0.0.0.0:9090
-external-ui: Yacd-meta
+external-ui: Yacd
+external-ui-url: "https://mirror.ghproxy.com/https://github.com/haishanh/yacd/archive/gh-pages.zipp"
 unified-delay: true
 tcp-concurrent: true
 global-client-fingerprint: chrome
@@ -43,6 +44,7 @@ tun:
   auto-route: true
   auto-detect-interface: true
   strict-route: true
+  route-exclude-address-set: [lancidr, cncidr]
   route-exclude-address: [223.5.5.5/16, 119.29.29.29/16, 114.114.114.114/16, 1.12.12.12/16, 74.48.160.148/16, 192.168.0.0/16, fc00::/7]
 profile:
   store-selected: true
@@ -82,3 +84,18 @@ sniffer:
     - "Mijia Cloud"
     - "dlg.io.mi.com"
     - "+.apple.com"
+
+rule-providers:
+  cncidr:
+    type: http
+    behavior: ipcidr
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/cncidr.txt"
+    path: ./ruleset/cncidr.yaml
+    interval: 86400
+
+  lancidr:
+    type: http
+    behavior: ipcidr
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/lancidr.txt"
+    path: ./ruleset/lancidr.yaml
+    interval: 86400
