--- a/GeneralClashConfig_lohome_meta_android.yaml
+++ b/GeneralClashConfig_lohome_meta_android.yaml
@@ -46,7 +46,7 @@ tun:
   auto-detect-interface: true
   strict-route: true
   route-exclude-address-set: [lancidr, cncidr]
-  route-exclude-address: [223.5.5.5/16, 119.29.29.29/16, 114.114.114.114/16, 1.12.12.12/16, 74.48.160.148/16, 192.168.0.0/16, fc00::/7]
+  route-exclude-address: [223.5.5.5/32, 119.29.29.29/32, 114.114.114.114/32, 1.12.12.12/32, 74.48.160.148/32]
   exclude-package: [
     "cmb.pb",
     "cn.gov.pbc.dcep",
