--- a/GeneralClashConfig_lohome_meta_android.yaml
+++ b/GeneralClashConfig_lohome_meta_android.yaml
@@ -130,7 +130,7 @@ tun:
   ]
 profile:
   store-selected: true
-  store-fake-ip: true
+  store-fake-ip: false
 dns:
   enable: true
   use-system-hosts: true
