--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -82,13 +82,13 @@ dns:
   use-hosts: true
   default-nameserver: [223.5.5.5, 119.29.29.29, 114.114.114.114]
   nameserver-policy:
-    "+.lohome.top, +.syncthing.net": [https://223.5.5.5/dns-query, https://1.12.12.12/dns-query]
-    "geosite:tracker,private": [223.5.5.5, 119.29.29.29]
-    "geosite:cn,china-lis,category-games@cn,apple,microsoft@cn,onedrive": [https://223.5.5.5/dns-query, https://1.12.12.12/dns-query]
-    "geosite:google,geolocation-!cn": [https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
+    "+.lohome.top, +.syncthing.net": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
+    "geosite:tracker,private": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
+    "geosite:cn,china-lis,category-games@cn,apple,microsoft@cn,onedrive": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
+    "geosite:google,geolocation-!cn": [https://doh.apad.pro/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
     "geosite:category-ads-all": rcode://success
-  proxy-server-nameserver: [https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
-  nameserver: [https://223.5.5.5/dns-query, https://1.12.12.12/dns-query]
+  proxy-server-nameserver: [https://doh.apad.pro/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
+  nameserver: [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
   fake-ip-filter:
     - "+.*"
 
