--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -42,7 +42,30 @@ tun:
   auto-route: true
   strict-route: true
   auto-detect-interface: true
-  route-exclude-address: [223.5.5.5/32, 119.29.29.29/32, 114.114.114.114/32, 1.12.12.12/32, 74.48.160.148/32]
+  route-exclude-address:
+    - 74.48.160.148/32
+    - 223.5.5.5/32
+    - 119.29.29.29/32
+    - 114.114.114.114/32
+    - 1.12.12.12/32
+    - 180.76.76.76/32
+    - 0.0.0.0/8
+    - 10.0.0.0/8
+    - 100.64.0.0/10
+    - 127.0.0.0/8
+    - 169.254.0.0/16
+    - 172.16.0.0/12
+    - 192.0.0.0/24
+    - 192.0.2.0/24
+    - 192.88.99.0/24
+    - 192.168.0.0/16
+    - 198.18.0.0/15
+    - 198.51.100.0/24
+    - 203.0.113.0/24
+    - ::/127
+    - fc00::/7
+    - fe80::/10
+    - ff00::/8
 profile:
   store-selected: true
   store-fake-ip: false
@@ -59,10 +82,10 @@ dns:
   nameserver-policy:
     "+.lohome.top, +.syncthing.net": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
     "geosite:tracker,private": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
-    "geosite:cn,china-lis,category-games@cn,apple,microsoft@cn,onedrive": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
-    "geosite:google,geolocation-!cn": [https://doh.apad.pro/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
+    "geosite:cn,tld-cn,china-lis,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
+    "geosite:google,gfw,facebook,twitter,openai": [https://doh.apad.pro/dns-query, https://185.222.222.222/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
     "geosite:category-ads-all": rcode://success
-  proxy-server-nameserver: [https://doh.apad.pro/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
+  proxy-server-nameserver: [https://doh.apad.pro/dns-query, https://185.222.222.222/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
   nameserver: [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
   fake-ip-filter:
     - "WORKGROUP"
