--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -51,6 +51,7 @@ tun:
     - 119.29.29.29/32
     - 114.114.114.114/32
     - 1.12.12.12/32
+    - 180.76.76.76/32
     - 0.0.0.0/8
     - 10.0.0.0/8
     - 100.64.0.0/10
@@ -84,10 +85,10 @@ dns:
   nameserver-policy:
     "+.lohome.top, +.syncthing.net": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
     "geosite:tracker,private": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
-    "geosite:cn,china-lis,category-games@cn,apple,microsoft@cn,onedrive": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
-    "geosite:google,geolocation-!cn": [https://doh.apad.pro/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
+    "geosite:cn,tld-cn,china-lis,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
+    "geosite:google,gfw,facebook,twitter,openai": [https://doh.apad.pro/dns-query, https://185.222.222.222/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
     "geosite:category-ads-all": rcode://success
-  proxy-server-nameserver: [https://doh.apad.pro/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
+  proxy-server-nameserver: [https://doh.apad.pro/dns-query, https://185.222.222.222/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
   nameserver: [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
   fake-ip-filter:
     - "+.*"
