--- a/GeneralClashConfig_lohome_meta_android.yaml
+++ b/GeneralClashConfig_lohome_meta_android.yaml
@@ -145,8 +145,10 @@ dns:
   nameserver-policy:
     "+.lohome.top, +.syncthing.net": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
     "geosite:tracker,private": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
+    "rule-set:direct": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
     "geosite:cn,tld-cn,china-lis,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
-    "geosite:google,gfw,github,facebook,twitter,tiktok,openai": [https://doh.apad.pro/dns-query, https://185.222.222.222/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
+    "rule-set:google,gfw,proxy":[https://doh.apad.pro/dns-query, https://185.222.222.222/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
+    "geosite:github,facebook,twitter,tiktok,openai": [https://doh.apad.pro/dns-query, https://185.222.222.222/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
     "geosite:category-ads-all": rcode://success
   proxy-server-nameserver: [https://doh.apad.pro/dns-query, https://185.222.222.222/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
   nameserver: [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
@@ -294,4 +296,28 @@ rule-providers:
     behavior: ipcidr
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/cncidr.txt"
     path: ./ruleset/cncidr.yaml
+    interval: 86400
+  proxy:
+    type: http
+    behavior: domain
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/proxy.txt"
+    path: ./ruleset/proxy.yaml
+    interval: 86400
+  google:
+    type: http
+    behavior: domain
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/google.txt"
+    path: ./ruleset/google.yaml
+    interval: 86400
+  gfw:
+    type: http
+    behavior: domain
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/gfw.txt"
+    path: ./ruleset/gfw.yaml
+    interval: 86400
+  direct:
+    type: http
+    behavior: domain
+    url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/direct.txt"
+    path: ./ruleset/direct.yaml
     interval: 86400
