--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -87,10 +87,10 @@ dns:
     "rule-set:direct": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
     "geosite:tracker,private": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
     "geosite:cn,tld-cn,china-lis,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
-    "rule-set:google,gfw,proxy": [https://doh.apad.pro/dns-query, https://185.222.222.222/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
-    "geosite:github,facebook,twitter,tiktok,openai": [https://doh.apad.pro/dns-query, https://185.222.222.222/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
+    "rule-set:google,gfw,proxy": [https://dns.google/dns-query#h3=true, https://dns12.quad9.net/dns-query, https://doh.apad.pro/dns-query]
+    "geosite:github,facebook,twitter,tiktok,openai": [https://dns.google/dns-query#h3=true, https://dns12.quad9.net/dns-query, https://doh.apad.pro/dns-query]
     "geosite:category-ads-all": rcode://success
-  proxy-server-nameserver: [https://doh.apad.pro/dns-query, https://185.222.222.222/dns-query, https://8.8.4.4/dns-query, https://9.9.9.11/dns-query]
+  proxy-server-nameserver: [https://dns.google/dns-query#h3=true, https://dns12.quad9.net/dns-query, https://doh.apad.pro/dns-query]
   nameserver: [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
   fake-ip-filter:
     - "+.*"
