--- a/GeneralClashConfig_lohome_meta_android.yaml
+++ b/GeneralClashConfig_lohome_meta_android.yaml
@@ -49,6 +49,7 @@ tun:
   route-exclude-address:
     - 74.48.160.148/32
     - 223.5.5.5/32
+    - 223.6.6.6/32
     - 119.29.29.29/32
     - 114.114.114.114/32
     - 1.12.12.12/32
@@ -143,137 +144,34 @@ dns:
   use-hosts: true
   default-nameserver: [223.5.5.5, 119.29.29.29, 114.114.114.114]
   nameserver-policy:
-    "+.lohome.top, +.syncthing.net": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
-    "rule-set:direct": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
-    "geosite:tracker,private": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
-    "geosite:cn,tld-cn,china-lis,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
-    "rule-set:google,gfw,proxy": [https://dns.google/dns-query#h3=true, https://dns12.quad9.net/dns-query, https://doh.apad.pro/dns-query]
-    "geosite:github,facebook,twitter,tiktok,openai": [https://dns.google/dns-query#h3=true, https://dns12.quad9.net/dns-query, https://doh.apad.pro/dns-query]
+    "+.lohome.top, +.syncthing.net":
+      - https://223.5.5.5/dns-query#h3=true
+      - https://1.12.12.12/dns-query
+    "rule-set:direct": 
+      - https://223.5.5.5/dns-query#h3=true
+      - https://1.12.12.12/dns-query
+    "geosite:tracker,private":
+      - https://223.5.5.5/dns-query#h3=true
+      - https://1.12.12.12/dns-query
+    "geosite:cn,tld-cn,china-lis,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": 
+      - https://223.5.5.5/dns-query#h3=true
+      - https://1.12.12.12/dns-query
+    "rule-set:google,gfw,proxy":
+      - https://dns.google/dns-query#h3=true
+      - https://dns12.quad9.net/dns-query
+      - https://doh.apad.pro/dns-query
+    "geosite:github,facebook,twitter,tiktok,openai":
+      - https://dns.google/dns-query#h3=true
+      - https://dns12.quad9.net/dns-query
+      - https://doh.apad.pro/dns-query
     "geosite:category-ads-all": rcode://success
-  proxy-server-nameserver: [https://dns.google/dns-query#h3=true, https://dns12.quad9.net/dns-query, https://doh.apad.pro/dns-query]
+  proxy-server-nameserver: 
+      - https://dns.google/dns-query#h3=true
+      - https://dns12.quad9.net/dns-query
+      - https://doh.apad.pro/dns-query
   nameserver: [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
   fake-ip-filter:
-    - "WORKGROUP"
-    - "+.apple.com"
-    - "+.synology.me"
-    - "+.synology.com"
-    - "+.lohome.top"
-    - "+.ddnsfree.com"
-    - "+.newlink.com"
-    - "+.newlinks.com"
-    - "+.shylwlkj.com"
-    - "+.nlsaas.com"
-    - "+.nlktj.cn"
-    - "+.lingnengsaas.com"
-    - "+.unicornenergy.cn"
-    - "+.czb365.com"
-    - "+.tencentcdb.com"
-    - "+.dnsapi.cn"
-    - "+.10010.com"
-    - "+.lan"
-    - "+.oray.net"
-    - "+.localdomain"
-    - "+.example"
-    - "+.invalid"
-    - "+.localhost"
-    - "+.test"
-    - "+.local"
-    - "+.home.arpa"
-    - time.*.com
-    - time.*.gov
-    - time.*.edu.cn
-    - time.*.apple.com
-    - time1.*.com
-    - time2.*.com
-    - time3.*.com
-    - time4.*.com
-    - time5.*.com
-    - time6.*.com
-    - time7.*.com
-    - ntp.*.com
-    - ntp1.*.com
-    - ntp2.*.com
-    - ntp3.*.com
-    - ntp4.*.com
-    - ntp5.*.com
-    - ntp6.*.com
-    - ntp7.*.com
-    - "*.time.edu.cn"
-    - "*.ntp.org.cn"
-    - "+.pool.ntp.org"
-    - time1.cloud.tencent.com
-    - music.163.com
-    - "*.music.163.com"
-    - "*.126.net"
-    - musicapi.taihe.com
-    - music.taihe.com
-    - songsearch.kugou.com
-    - trackercdn.kugou.com
-    - "*.kuwo.cn"
-    - api-jooxtt.sanook.com
-    - api.joox.com
-    - joox.com
-    - y.qq.com
-    - "*.y.qq.com"
-    - streamoc.music.tc.qq.com
-    - mobileoc.music.tc.qq.com
-    - isure.stream.qqmusic.qq.com
-    - dl.stream.qqmusic.qq.com
-    - aqqmusic.tc.qq.com
-    - amobile.music.tc.qq.com
-    - "*.xiami.com"
-    - "*.music.migu.cn"
-    - music.migu.cn
-    - "+.msftconnecttest.com"
-    - "+.msftncsi.com"
-    - msftconnecttest.com
-    - msftncsi.com
-    - localhost.ptlogin2.qq.com
-    - localhost.sec.qq.com
-    - "+.srv.nintendo.net"
-    - "*.n.n.srv.nintendo.net"
-    - "+.stun.playstation.net"
-    - xbox.*.*.microsoft.com
-    - "*.*.xboxlive.com"
-    - xbox.*.microsoft.com
-    - xnotify.xboxlive.com
-    - "+.battlenet.com.cn"
-    - "+.wotgame.cn"
-    - "+.wggames.cn"
-    - "+.wowsgame.cn"
-    - "+.wargaming.net"
-    - proxy.golang.org
-    - stun.*.*
-    - stun.*.*.*
-    - "+.stun.*.*"
-    - "+.stun.*.*.*"
-    - "+.stun.*.*.*.*"
-    - "+.stun.*.*.*.*.*"
-    - heartbeat.belkin.com
-    - "*.linksys.com"
-    - "*.linksyssmartwifi.com"
-    - "+.router.asus.com"
-    - "+.google.com"
-    - "+.nflxvideo.net"
-    - "*.square-enix.com"
-    - "*.finalfantasyxiv.com"
-    - "*.ffxiv.com"
-    - "*.ff14.sdo.com"
-    - ff.dorado.sdo.com
-    - "*.mcdn.bilivideo.cn"
-    - "+.media.dssott.com"
-    - shark007.net
-    - ntp.ntsc.ac.cn
-    - '*.mcdn.bilivideo.cn'
-    - "+.media.dssott.com"
-    - ntp.ntsc.ac.cn
-    - '*.mcdn.bilivideo.cn'
-    - +.media.dssott.com
-    - +.cmbchina.com
-    - +.cmbimg.com
-    - local.adguard.org
-    - +.sandai.net
-    - +.n0808.com
+    - "+.*"
 
 sniffer:
   enable: true
