--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -91,7 +91,7 @@ dns:
     "geosite:tracker,private":
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
-    "geosite:cn,tld-cn,china-lis,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": 
+    "geosite:cn,tld-cn,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": 
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
     "rule-set:google,gfw,proxy":
