--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -35,58 +35,10 @@ geox-url:
 tun:
   enable: true
   stack: system # system gvisor mixed
-  dns-hijack:
-    - any:53
-    - tcp://any:53
   auto-redirect: true
   auto-route: true
   strict-route: true
   auto-detect-interface: true
-  route-exclude-address:
-    - 74.48.160.148/32
-    - 122.224.0.0/12
-    - 119.96.0.0/13
-    - 106.56.0.0/13
-    - 120.133.71.0/24
-    - 163.181.166.0/24
-    - 163.181.164.0/24
-    - 163.181.201.0/24
-    - 163.181.199.0/24
-    - 163.181.42.0/24
-    - 163.181.39.0/24
-    - 47.89.66.0/24
-    - 128.1.157.0/24
-    - 163.181.23.0/24
-    - 163.181.129.0/24
-    - 163.181.81.0/24
-    - 163.181.82.0/24
-    - 163.181.128.0/24
-    - 163.181.160.0/24
-    - 14.112.0.0/12
-    - 183.0.0.0/10
-    - 223.5.5.5/32
-    - 223.6.6.6/32
-    - 119.29.29.29/32
-    - 114.114.114.114/32
-    - 1.12.12.12/32
-    - 180.76.76.76/32
-    - 0.0.0.0/8
-    - 10.0.0.0/8
-    - 100.64.0.0/10
-    - 127.0.0.0/8
-    - 169.254.0.0/16
-    - 172.16.0.0/12
-    - 192.0.0.0/24
-    - 192.0.2.0/24
-    - 192.88.99.0/24
-    - 192.168.0.0/16
-    - 198.18.0.0/15
-    - 198.51.100.0/24
-    - 203.0.113.0/24
-    - ::/127
-    - fc00::/7
-    - fe80::/10
-    - ff00::/8
 profile:
   store-selected: true
   store-fake-ip: false
@@ -101,7 +53,7 @@ dns:
   use-hosts: true
   default-nameserver: [223.5.5.5, 119.29.29.29, 114.114.114.114]
   nameserver-policy:
-    "+.lohome.top, +.syncthing.net":
+    "+.lohome.top,+.syncthing.net,+.zerotier.net":
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
     "rule-set:direct": 
@@ -121,7 +73,6 @@ dns:
       - https://dns.google/dns-query#h3=true
       - https://dns12.quad9.net/dns-query
       - https://doh.apad.pro/dns-query
-    "geosite:category-ads-all": rcode://success
   proxy-server-nameserver: 
       - https://dns.google/dns-query#h3=true
       - https://dns12.quad9.net/dns-query
@@ -129,10 +80,13 @@ dns:
   nameserver: [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
   fake-ip-filter:
     - "WORKGROUP"
+    - "geosite:CN"
     - "+.apple.com"
     - "+.synology.me"
     - "+.synology.com"
     - "+.lohome.top"
+    - "+.syncthing.net"
+    - "+.zerotier.com"
     - "+.myaddr.tools"
     - "+.ddnsfree.com"
     - "+.newlink.com"
