--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -303,7 +303,7 @@ rule-providers:
 
   china:
     type: http
-    behavior: domain
+    behavior: classical
     url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/China/China_No_Resolve.yaml"
     path: ./ruleset/china.yaml
     interval: 86400
