--- a/GeneralClashConfig_lohome_meta.yaml
+++ b/GeneralClashConfig_lohome_meta.yaml
@@ -231,6 +231,20 @@ rule-providers:
     path: ./ruleset/reject.yaml
     interval: 86400
 
+  binance:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Binance/Binance_No_Resolve.yaml"
+    path: ./ruleset/binance.yaml
+    interval: 86400
+
+  crypto:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Crypto/Crypto_No_Resolve.yaml"
+    path: ./ruleset/crypto.yaml
+    interval: 86400
+
   icloud:
     type: http
     behavior: domain
@@ -243,6 +257,13 @@ rule-providers:
     behavior: domain
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/apple.txt"
     path: ./ruleset/apple.yaml
+    interval: 86400
+
+  netflix:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Netflix/Netflix_Classical_No_Resolve.yaml"
+    path: ./ruleset/netflix.yaml
     interval: 86400
 
   youtube:
@@ -266,11 +287,39 @@ rule-providers:
     path: ./ruleset/google.yaml
     interval: 86400
 
-  twitter:
+  openai:
     type: http
     behavior: classical
-    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitter_No_Resolve.yaml"
-    path: ./ruleset/twitter.yaml
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OpenAI/OpenAI_No_Resolve.yaml"
+    path: ./ruleset/openai.yaml
+    interval: 86400
+
+  bahamut:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Bahamut/Bahamut_No_Resolve.yaml"
+    path: ./ruleset/bahamut.yaml
+    interval: 86400
+
+  amazon:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Amazon/Amazon_No_Resolve.yaml"
+    path: ./ruleset/amazon.yaml
+    interval: 86400
+
+  onedrive:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OneDrive/OneDrive_No_Resolve.yaml"
+    path: ./ruleset/onedrive.yaml
+    interval: 86400
+
+  microsoft:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Microsoft/Microsoft_No_Resolve.yaml"
+    path: ./ruleset/microsoft.yaml
     interval: 86400
 
   discord:
@@ -278,6 +327,13 @@ rule-providers:
     behavior: classical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Discord/Discord_No_Resolve.yaml"
     path: ./ruleset/discord.yaml
+    interval: 86400
+
+  twitter:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Twitter/Twitter_No_Resolve.yaml"
+    path: ./ruleset/twitter.yaml
     interval: 86400
 
   tiktok:
