--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -115,18 +115,20 @@ dns:
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
     "rule-set:google,gfw,proxy,proxyclassical,global":
-      - https://dns.google/dns-query#h3=true
-      - https://dns12.quad9.net/dns-query
-      - https://doh.apad.pro/dns-query
+      - https://dns.google/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+      - https://dns12.quad9.net/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+      - https://doh.apad.pro/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
     "geosite:github,facebook,twitter,tiktok,openai":
-      - https://dns.google/dns-query#h3=true
-      - https://dns12.quad9.net/dns-query
-      - https://doh.apad.pro/dns-query
+      - https://dns.google/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+      - https://dns12.quad9.net/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+      - https://doh.apad.pro/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
   proxy-server-nameserver: 
-      - https://dns.google/dns-query#h3=true
-      - https://dns12.quad9.net/dns-query
-      - https://doh.apad.pro/dns-query
-  nameserver: [https://223.5.5.5/dns-query#h3=true, https://1.12.12.12/dns-query]
+      - https://dns.google/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+      - https://dns12.quad9.net/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+      - https://doh.apad.pro/dns-query#h3=true&ecs=120.76.0.0/14&ecs-override=true
+  nameserver: 
+    - https://223.5.5.5/dns-query#h3=true
+    - https://1.12.12.12/dns-query
   fake-ip-filter:
     - "+.*"
 
@@ -152,6 +154,13 @@ rule-providers:
     url: "https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/reject.txt"
     path: ./ruleset/reject.yaml
     interval: 86400
+
+  myproxy:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/Proxy.list"
+    path: ./ruleset/myproxy.yaml
+    interval: 1200
 
   binance:
     type: http
