--- a/GeneralClashConfig_lohome_meta_mac.yaml
+++ b/GeneralClashConfig_lohome_meta_mac.yaml
@@ -117,7 +117,7 @@ dns:
     "geosite:cn,tld-cn,category-games@cn,apple-cn,apple,microsoft@cn,onedrive": 
       - https://223.5.5.5/dns-query#h3=true
       - https://1.12.12.12/dns-query
-    "rule-set:github,google,gfw,proxy,tiktok,openai,proxyclassical,global":
+    "rule-set:github,google,gfw,proxy,tiktok,openai,myopenai,proxyclassical,global":
       - https://dns.google/dns-query#ecs=120.76.0.0/14&ecs-override=true
       - https://dns12.quad9.net/dns-query#ecs=120.76.0.0/14&ecs-override=true
     "geosite:github,google,facebook,twitter,tiktok,openai":
@@ -157,6 +157,13 @@ rule-providers:
     path: ./ruleset/reject.yaml
     interval: 86400
 
+  directprocess:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/DirectProcess.list"
+    path: ./ruleset/directprocess.yaml
+    interval: 1000
+
   mydirect:
     type: http
     behavior: classical
@@ -178,11 +185,25 @@ rule-providers:
     path: ./ruleset/binance.yaml
     interval: 86400
 
+  mybinance:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/Binance.list"
+    path: ./ruleset/mybinance.yaml
+    interval: 86400
+
   crypto:
     type: http
     behavior: classical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Crypto/Crypto_No_Resolve.yaml"
     path: ./ruleset/crypto.yaml
+    interval: 86400
+
+  mycrypto:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/Crypto.list"
+    path: ./ruleset/mycrypto.yaml
     interval: 86400
 
   icloud:
@@ -239,6 +260,13 @@ rule-providers:
     behavior: classical
     url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OpenAI/OpenAI_No_Resolve.yaml"
     path: ./ruleset/openai.yaml
+    interval: 86400
+
+  myopenai:
+    type: http
+    behavior: classical
+    url: "https://raw.githubusercontent.com/CuminLo/clash-rules/master/AI.list"
+    path: ./ruleset/myopenai.yaml
     interval: 86400
 
   bahamut:
