--- a/GeneralClashConfig.yaml
+++ b/GeneralClashConfig.yaml
@@ -1,11 +1,4 @@
 
-#---------------------------------------------------#
-# 配置文件需要放置在 $HOME/.config/clash/config.yml
-# 或者运行目录下的config.yml
-# fallback: 与 nameserver 并发发起DNS请求，如果解析的IP地址是CN就用 nameserver，如果不是 CN 就用 fallback
-# fake-ip-filter: 代表匹配的不走fake-ip
-#---------------------------------------------------#
-# 混合端口 HTTP和SOCKS5用一个端口
 port: 7890
 socks-port: 7891
 redir-port: 7892
@@ -371,7 +364,7 @@ Select: &Select
   timeout: 600
 
 proxy-groups: 
-  - {name: 🚀 节点选择, <<: *Select, proxies: [🔥 手动切换, ♻️ 自动选择, DIRECT]}
+  - {name: 🚀 节点选择, <<: *Select, proxies: [🔥 手动切换, 🐔 落地鸡, ♻️ 自动选择, DIRECT]}
   - {name: 🔥 手动切换, <<: *SelectAll}
   - {name: ♻️ 自动选择, <<: *UrlTest}
   - {name: 🅱️ Crypto, <<: *SelectAll, filter: *FilterCrypto}
@@ -379,7 +372,7 @@ proxy-groups:
   - {name: 🆎 AdBlock, type: select, proxies: [REJECT, DIRECT]}
   - {name: 🇬 Google, <<: *Select, proxies: [🔥 手动切换, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
   - {name: 🤖 Chat服务, <<: *Select, proxies: [🔥 手动切换, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
-  - {name:  苹果服务, <<: *Select, proxies: [DIRECT, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
+  - {name: 🍎 苹果服务, <<: *Select, proxies: [DIRECT, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
   - {name: 📹 油管视频, <<: *Select, proxies: [🔥 手动切换, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
   - {name: 👨‍💻‍ Github, <<: *Select, proxies: [🔥 手动切换, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
   - {name: 📺 巴哈姆特, <<: *Select, proxies: [🇨🇳 台湾节点, 🚀 节点选择, 🐔 落地鸡, 🇺🇲 美国节点, ♻️ 自动选择]}
@@ -417,10 +410,10 @@ rules:
   - DOMAIN,clash.razord.top,🎯 全球直连
   - DOMAIN,yacd.haishan.me,🎯 全球直连
   - RULE-SET,private,🎯 全球直连
-  - RULE-SET,icloud, 苹果服务
-  - RULE-SET,apple, 苹果服务
-  - RULE-SET,appleall, 苹果服务
-  - GEOSITE,apple-cn, 苹果服务
+  - RULE-SET,icloud,🍎 苹果服务
+  - RULE-SET,apple,🍎 苹果服务
+  - RULE-SET,appleall,🍎 苹果服务
+  - GEOSITE,apple-cn,🍎 苹果服务
   - RULE-SET,youtube,📹 油管视频
   - RULE-SET,netflix,📹 油管视频
   - GEOSITE,youtube,📹 油管视频
